<resources>
    <string name="app_name">Artook</string>
    <string name="facebook_app_id" translatable="false">1239719876759899</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1239719876759899</string>
    <string name="facebook_client_token" translatable="false">ae4ee705f723ee6f86c0f8e1d601bd55</string>
    <string name="google_client_id" translatable="false">618031766593-m2m3pu0l1oenkrk5s2r30t9h893e80d0.apps.googleusercontent.com</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter">Enter</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="login_with_social_network">Login with Social Network</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="register_with_social_network">Register with Social Network</string>
    <string name="next">Next</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change">Change</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="videos_articles">Videos &amp; Articles</string>
    <string name="profile">Profile</string>
    <string name="your_wall_is_empty">Your wall is empty!</string>
    <string name="empty_wall_description">Our artists are publishing every day.\n Explore their work and follow them now.</string>
    <string name="start_searching">Start Searching</string>
    <string name="report_this_post">Report this post</string>
    <string name="report_description">This post will be reported to our team \n Help us understand what’s wrong.</string>
    <string name="report">Report</string>
    <string name="submit">Submit</string>
    <string name="comments">Comments</string>
    <string name="enter_your_comment">Enter your comment</string>
    <string name="categories">Categories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit">Edit</string>
    <string name="chat">Chat</string>
    <string name="chats">Chats</string>
    <string name="feed">Feed</string>
    <string name="saved">Saved</string>
    <string name="bio">Bio</string>
    <string name="change_password">Change Password</string>
    <string name="update">Update</string>
    <string name="change_password_description">Enter your current password and your new password to change your password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="follow">Follow</string>
    <string name="new_post">New Post</string>
    <string name="gallery">Gallery</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="share">Share</string>
    <string name="videos">Videos</string>
    <string name="articles">Articles</string>
    <string name="video">Videos</string>
    <string name="article">Articles</string>
    <string name="read_more">Read more</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="details">Details</string>
    <string name="participate">Participate</string>
    <string name="enter_email_address">Please enter your email address!</string>
    <string name="enter_password">Please enter your password!</string>
    <string name="internet_connection">Please check your internet connection!</string>
    <string name="invalid_data">Invalid email address or password!</string>
    <string name="invalid_email_address">Invalid email address format!</string>
    <string name="enter_first_name">Please enter your first name!</string>
    <string name="enter_last_name">Please enter your last name!</string>
    <string name="enter_phone_number">Please enter your phone number!</string>
    <string name="invalid_phone_number">Phone format 07********!</string>
    <string name="verification_completed">Verification Completed</string>
    <string name="enter_verification_code">Please enter the verification code!</string>
    <string name="code_sent_successfully">Code sent successfully!</string>
    <string name="enter_confirm_password">Please enter confirm password!</string>
    <string name="match_passwords">Passwords don\'t match!</string>
    <string name="choose">Choose</string>
    <string name="camera">Camera</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="wrong_current_password">Wrong current password!</string>
    <string name="password_updated">Password changed successfully!</string>
    <string name="enter_current_password">Please enter you current password!</string>
    <string name="enter_new_password">Please enter new password!</string>
    <string name="email_exists">Email address is already exists!</string>
    <string name="phone_exists">Phone number is already exists!</string>
    <string name="phone_not_exist">Phone number doesn\'t exist!</string>
    <string name="wrong_code">Verification not completed! Try again</string>
    <string name="you_have_no_followers_yet">You have no followers yet!</string>
    <string name="start_posting_and_get_higher_exposure_to_gain_more_followers">Start posting and get higher exposure to gain more followers.</string>
    <string name="you_have_no_followings_yet">You have no followings yet!</string>
    <string name="start_searching_for_great_people_and_add_them_to_your_following_list">Start searching for great people and add them to your following list.</string>
    <string name="logout">Logout</string>
    <string name="logout_description">Are you sure you want to logout from your account?</string>
    <string name="no_feed_posts_yet">No Feed Posts Yet!</string>
    <string name="no_saved_posts_yet">No Saved Posts Yet!</string>
    <string name="full_name">Full name</string>
    <string name="enter_name">Please enter your full name!</string>
    <string name="report_note">Please write your report reason!</string>
    <string name="reported_successfully">Post reported successfully!</string>
    <string name="notifications">Notifications</string>
    <string name="you_have_no_notifications_yet">You have no notifications yet!</string>
    <string name="submit_participation">Submit Participation</string>
    <string name="winners">Winners</string>
    <string name="participants">Participants</string>
    <string name="vote">Vote</string>
    <string name="voted">Voted</string>
    <string name="no_posts_yet">No Posts Yet!</string>
    <string name="unfollow">Unfollow</string>
    <string name="username">Username</string>
    <string name="enter_user_name">Please enter your username!</string>
    <string name="username_invalid_format">User name can\'t contain space!</string>
    <string name="email_address_invalid_format">Email address can\'t contain space!</string>
    <string name="password_format">Password should be 8 characters contains uppercase, lowercase and numbers!</string>
    <string name="username_exists">Username is already exists!</string>
    <string name="no_results">No results!</string>
    <string name="search_in">Search in</string>
    <string name="previous_contests">Previous Contests</string>
    <string name="enter_image">Please enter your participation image!</string>
    <string name="enter_description">Please enter the post description!</string>
    <string name="participation_submitted">Your participation has been submitted successfully!</string>
    <string name="votes">votes</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="delete_post">Delete Post?</string>
    <string name="delete_description">Are you sure you want to delete this post? \n You can’t undo this step.</string>
    <string name="delete">Delete</string>
    <string name="edit_description">Edit Description</string>
    <string name="save_changes">Save Changes</string>
    <string name="deleted_successfully">Post deleted successfully!</string>
    <string name="updated_successfully">Post updated successfully!</string>
    <string name="upload_media">Upload Media</string>
    <string name="first_upload_pictures_and_videos_to_your_post_you_can_upload_up_to_6_media_contents">First, upload pictures and videos to your post! You can upload up to 6 media contents.</string>
    <string name="welcome_to_artook">Welcome to Artook!</string>
    <string name="are_you_sure_you_want_to_delete_this_comment">Are you sure you want to delete this comment?</string>
    <string name="tell_us_more">Tell us More</string>
    <string name="now_choose_to_what_section_your_work_follows_and_tell_us_more_about_it">Now, choose to what section your work follows, and tell us more about it.</string>
    <string name="media_type">Media Type</string>
    <string name="pictures">Pictures</string>
    <string name="already_participated">You have already participated in this contest</string>
    <string name="just_now">Just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours_ago">hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="change_language">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_media">Please add at least one media type!</string>
    <string name="select_category">Select Category</string>
    <string name="select_a_category">Please select a category!</string>
    <string name="post_created">Post created successfully!</string>
    <string name="google_signup_failed">Google sign up failed!</string>
    <string name="cancel_post">Cancel Post</string>
    <string name="are_you_sure_you_want_to_cancel_this_post">Are you sure you want to cancel this post?</string>
    <string name="reached_max_videos">Maximum videos 2!</string>

</resources>