<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/_35sdp"
    android:layout_marginEnd="@dimen/_35sdp"
    android:background="@drawable/white_10radius"
    android:padding="@dimen/_15sdp">

    <ImageView
        android:id="@+id/close"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/red_close"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_horizontal"
        android:text="@string/media_type"
        android:fontFamily="@font/gill_sans_semibold"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/black"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_15sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dark_blue_purple_gradient_background"
            android:padding="@dimen/_7sdp"
            android:gravity="center_horizontal"
            android:text="@string/pictures"
            android:textColor="@color/white"
            android:fontFamily="@font/gill_sans_semibold"/>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/videos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/images"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_15sdp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/purple_15_stroke"
            android:padding="@dimen/_7sdp"
            android:gravity="center_horizontal"
            android:text="@string/videos"
            android:textColor="@color/dark_purple"
            android:fontFamily="@font/gill_sans_semibold"/>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>