<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/_50sdp"
    android:layout_marginEnd="@dimen/_50sdp"
    android:background="@drawable/white_10radius"
    android:padding="@dimen/_15sdp">
    <ImageView
        android:id="@+id/close"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/red_close"/>
    <ImageView
        android:id="@+id/report_icon"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/report_icon"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/report_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_9sdp"
        android:gravity="center_horizontal"
        android:text="@string/report_this_post"
        android:fontFamily="@font/gill_sans_semibold"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_9sdp"
        android:gravity="center_horizontal"
        android:text="@string/report_description"
        android:fontFamily="@font/gill_sans_regular"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/black"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/report_layout"
        style="@style/DarkBlueTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColorHint="@color/darkest_blue"
        app:counterTextColor="@color/darkest_blue"
        app:helperTextTextColor="@color/darkest_blue"
        app:hintTextColor="@color/darkest_blue"
        app:boxStrokeColor="@color/darkest_blue"
        app:boxBackgroundColor="@color/light_gray_trans35"
        app:boxStrokeWidth="@dimen/_1sdp"
        app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
        app:boxCornerRadiusBottomStart="@dimen/_8sdp"
        app:boxCornerRadiusTopEnd="@dimen/_8sdp"
        app:boxCornerRadiusTopStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_9sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/report_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/report"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/gill_sans_regular"
            android:textColorHint="@color/darkest_blue"
            android:textColor="@color/darkest_blue"
            app:helperText="OutlinedBox helper helper"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/report_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_17sdp"
        android:backgroundTint="@color/purple2"
        app:cornerRadius="@dimen/_17sdp"
        android:text="@string/submit"
        android:fontFamily="@font/gill_sans_semibold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/_11ssp"/>
</androidx.constraintlayout.widget.ConstraintLayout>